--- a/_config.yml
+++ b/_config.yml
@@ -1,39 +1,39 @@
 #-------------------------------
 # General Site Settings
 
-title: Galada Theme | Theme for Jekyll
-description: Galada is an easy and simple theme for Jekyll. Dark colors, give it a special exquisite look. A careful approach to design and features make it an ideal solution for a personal blog. # this means to ignore newlines until "baseurl:"
+title: GàGamer xin chào! | Gamer guide
+description: Game guide, LOL, PUBG, ROS, pro and fair-play.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 
 #-------------------------------
 # About Section
-author-name:   Natali Anderson
-author-avatar: 09.jpg
+author-name:   GàGamer
+author-avatar: logo_5.png
 
 
 #-------------------------------
 # Contact links
-facebook:  https://facebook.com/ # Add your Facebook handle
-twitter:   https://twitter.com/ # Add your Facebook handle
-instagram: https://www.instagram.com/ # Add your Facebook handle
-pinterest: https://www.pinterest.com/ # Add your Facebook handle
+facebook:  https://www.facebook.com/gamer9a # Add your Facebook handle
+# twitter:   https://twitter.com/ # Add your Facebook handle
+# instagram: https://www.instagram.com/ # Add your Facebook handle
+# pinterest: https://www.pinterest.com/ # Add your Facebook handle
 
 
 #-------------------------------
 # Comment Section (Disqus)
-disqus-identifier: mr-brown # Add your shortname for Disqus Comment. For example mr-brown
+# disqus-identifier: mr-brown # Add your shortname for Disqus Comment. For example mr-brown
 
 
 #-------------------------------
 # Instagram Feed
-instafeed: true # To enable the instafeed, use the value true. To turn off use the value false.
+# instafeed: true # To enable the instafeed, use the value true. To turn off use the value false.
 
 
 #-------------------------------
 # Google Analytics
-google-analytics: # Add your identifier. For example UA-99631805-1.
+google-analytics: UA-136781768-1 # Add your identifier. For example UA-99631805-1.
 
 
 #-------------------------------
