--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ author-avatar: logo_5.png
 
 #-------------------------------
 # Contact links
+youtube: https://www.youtube.com/channel/UCjwY-Idv_B3ZMcPExWPQUBQ
 facebook:  https://www.facebook.com/gamer9a # Add your Facebook handle
 # twitter:   https://twitter.com/ # Add your Facebook handle
 # instagram: https://www.instagram.com/ # Add your Facebook handle
